# sandesh

./: .codacy.yaml  .gitignore  CLAUDE.md  README.md  RELEASING.md  install.sh  pyproject.toml  server.json
.github/workflows/: publish-npm.yml  publish-pypi.yml
app/: cli.py  mcp_server.py  notify.py  sandesh_db.py
docs/: INSTALL.md  USER_GUIDE.md  usage-scenarios.md
docs/changes/: CR-SAN-001-mcp-server.md  CR-SAN-002-read-tools.md  CR-SAN-003-mutating-tools.md  CR-SAN-004-e2e-smoke.md  CR-SAN-005-retire-status.md  (+39 more)
sandesh/: __init__.py  cli.py  mcp_server.py  migrate.py  notify.py  sandesh_db.py
scripts/: release.sh
tests/: _migrate_helpers.py  test_admin_grant.py  test_ci_migration_gate.py  test_cleanup_sweep.py  test_consolidate_skip.py  test_consolidation.py  test_docs_restructure.py  test_fts_cli.py  test_fts_index.py  test_fts_search.py  test_global_store.py  test_inbox_filters.py  test_inbox_filters_cli.py  test_init_check.py  test_init_command.py  test_install.py  test_lifecycle_archive.py  test_lifecycle_cli.py  test_lifecycle_e2e.py  test_lifecycle_tombstone.py  test_mcp_e2e.py  test_mcp_lifecycle_tools.py  test_mcp_missing_extra.py  test_mcp_mutating_tools.py  test_mcp_project_derivation.py  test_mcp_prompts.py  test_mcp_read_tools.py  test_mcp_search_surface.py  test_mcp_server.py  test_mcp_surface.py  test_migrate.py  test_migrate_global.py  test_migration_0003.py  test_migration_0004.py  test_migration_docs_boundary.py  test_notifier_lock_resilience.py  test_package.py  test_pkgbuild.py  test_project_id_validation.py  test_project_scoping.py  (+18 more)
(+43 files in other folders)
