[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "sandesh-relay"
dynamic = ["version"]
description = "SQLite-backed multi-project messaging relay for cooperating agent/orchestrator sessions"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Antony John" }]
keywords = ["mcp", "messaging", "agents", "orchestration", "sqlite"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX",
  "Topic :: Communications",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]
migrate = ["yoyo-migrations>=9,<10", "jsonschema>=4.26"]

[project.scripts]
sandesh = "sandesh.cli:main"
sandesh-mcp = "sandesh.mcp_server:main"

[project.urls]
Homepage = "https://github.com/anthill-tec/sandesh"
Repository = "https://github.com/anthill-tec/sandesh"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["sandesh"]

[tool.hatch.build.targets.wheel.force-include]
"sandesh/data/usage-scenarios.md" = "sandesh/data/usage-scenarios.md"
